--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,3 +10,132 @@
     --cor1: #49a09d;
     --cor2: #5f2c82;
 }
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: var(--cor2);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+#ilogin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+   
+
+
+    background-color: white;
+    width: 250px;
+    height: 510px;
+    border-radius: 20px;
+    box-shadow: 00px 00px 10px rgba(0, 0, 0, 0.445) ;
+
+    transition: width 0.3s height 0.3s;
+    transition-timing-function: ease;
+    transform: translate(-50%, -50%);/*Posição da tela de login, fazendo com que ela fique no centro.*/
+
+}
+#imagem{
+    display: block;
+    background: url(../imagens/tela-login2-medium.jpg);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 20px 20px 0px 0px;
+    
+    
+}
+#iformulario{
+    display: block;
+    padding: 10px;
+}
+#iformulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+#iformulario p {
+    font-size: 0.8em;
+}
+.campo{
+    background-color: var(--cor2);
+    display: block;
+    height: 40px;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 2px solid var(--cor2);
+}
+label{
+    display: none;
+}
+div.campo > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color:#83e2df;
+    font-size: 1em;
+    width: calc(100% - 44.1px);/*função calc, faz um calculo que subtrai 44.1px de 100% do valor width*/
+    height: 100%;
+    border: 01px solid #63adab;
+    border-radius: 8px ;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+div.campo > input:focus-within{ /*quando estiver digitando a caixa fica branca*/
+    background-color: white;
+}
+
+input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor1);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+input[type=submit]:hover{
+    background-color: #398581;
+    transition: background-color 0.2s;
+    
+}
+a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: white;
+    color: #29615e;
+    border: 1px solid var(--cor1);
+    border-radius: 5px ;
+    text-decoration: none;
+}
+.botao:hover{
+    background-color: #5cc7c3;
+    transition: background-color 0.2s;
+}
+#imail-icon{
+    font-size: 0.8em;
+}
